
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "hxarc"
authors = [
    {name="nmaekawa", email="nmaekawa@g.harvard.edu"},
]
description = "webapp to run 3rd party scripts"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "django==4.2.20",
    "django-cors-headers==4.7.0",
    "lti>=0.9.5",
    "python_dotenv==1.1.0",
    "python3-saml==1.16.0",
    "redis==6.0.0",
]

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "isort",
    "model_bakery",
    "pytest",
    "pytest-django",
    "pytest-env",
]


[tool.setuptools.dynamic]
version = {attr = "hxarc.__version__"}


[tool.isort]
profile = "black"

[tool.black]
target-version = ["py312"]
exclude = '''
/(
      \.eggs
    | \.git
    | \.tox
    | \.venv
    | build
    | dist
)/
'''

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = "src"
env = [
    "DJANGO_SETTINGS_MODULE=hxarc.settings.test",
]


