
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "hxarc"
authors = [
    {name="nmaekawa", email="nmaekawa@g.harvard.edu"},
]
description = "webapp to run 3rd party scripts"
readme = "README.md"
requires-python = ">=3.12"
dynamic = ["version", "dependencies"]

[project.optional-dependencies]
test = [
    "black",
    "flake8",
    "isort",
    "model_bakery",
    "pytest",
    "pytest-django",
    "pytest-env",
]


[tool.setuptools.dynamic]
version = {attr = "hxarc.__version__"}
dependencies = {file = "requirements.txt"}


[tool.isort]
profile = "black"
skip = [
        "migrations",
        "__pypackages__",
        ".pants.d",
        ".tox",
        "build",
        ".venv",
        "_build",
        ".eggs",
        ".mypy_cache",
        ".nox",
        "dist",
        "buck-out",
        ".svn",
        ".direnv",
        "venv",
        "node_modules",
        ".bzr",
        ".pytype",
        ".hg",
        ".git"
]

[tool.black]
target-version = ["py312"]
exclude = '''
/(
      \.eggs
    | \.git
    | \.tox
    | \.venv
    | build
    | dist
    | migrations
)/
'''

[tool.ruff]
target-version = "py312"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = "src"
env = [
    "DJANGO_SETTINGS_MODULE=hxarc.settings.test",
]


